--- a/helm/flexprice/templates/deployment-worker.yaml
+++ b/helm/flexprice/templates/deployment-worker.yaml
@@ -34,16 +34,20 @@ spec:
           args:
             - |
               echo "Waiting for PostgreSQL..."
-              until nc -z {{ include "flexprice.postgres.host" . }} {{ include "flexprice.postgres.port" . }}; do
+              until nc -z {{ include "flexprice.postgres.host" . | quote }} {{ include "flexprice.postgres.port" . | quote }}; do
                 sleep 2
               done
               echo "PostgreSQL is ready!"
+              {{- if or .Values.temporal.external.enabled .Values.temporal.operator.enabled }}
               
               echo "Waiting for Temporal..."
-              until nc -z {{ (split ":" (include "flexprice.temporal.address" .))._0 }} {{ (split ":" (include "flexprice.temporal.address" .))._1 | default "7233" }}; do
+              until nc -z {{ include "flexprice.temporal.host" . | quote }} {{ include "flexprice.temporal.port" . | quote }}; do
                 sleep 2
               done
               echo "Temporal is ready!"
+              {{- else }}
+              echo "Skipping Temporal check (not enabled)"
+              {{- end }}
       containers:
         - name: worker
           image: "{{ .Values.flexprice.image.repository }}:{{ .Values.flexprice.image.tag | default .Chart.AppVersion }}"
