--- a/helm/flexprice/templates/configmap.yaml
+++ b/helm/flexprice/templates/configmap.yaml
@@ -181,3 +181,7 @@ data:
 
     oauth:
       redirect_uri: {{ .Values.oauth.redirectUri | quote }}
+    # Note: The actual encryption_key value is passed via FLEXPRICE_SECRETS_ENCRYPTION_KEY env var
+    # This section just tells Viper that this config key exists
+    secrets:
+      encryption_key: ""
