--- a/helm/flexprice/templates/stackgres-cluster.yaml
+++ b/helm/flexprice/templates/stackgres-cluster.yaml
@@ -14,6 +14,10 @@ spec:
   instances: {{ .Values.postgres.operator.instances }}
   postgres:
     version: {{ .Values.postgres.operator.version | quote }}
+    {{- if .Values.postgres.operator.extensions }}
+    extensions:
+      {{- toYaml .Values.postgres.operator.extensions | nindent 6 }}
+    {{- end }}
   pods:
     persistentVolume:
       size: {{ .Values.postgres.operator.storage.size | quote }}
@@ -27,7 +31,9 @@ spec:
       tolerations: []
   configurations:
     sgPostgresConfig: {{ .Values.postgres.operator.name }}-config
+    {{- if .Values.postgres.operator.connectionPooling.enabled }}
     sgPoolingConfig: {{ .Values.postgres.operator.name }}-pooling
+    {{- end }}
   managedSql:
     scripts:
       - sgScript: {{ .Values.postgres.operator.name }}-init
@@ -39,11 +45,13 @@ metadata:
   labels:
     {{- include "flexprice.labels" . | nindent 4 }}
 spec:
-  postgresVersion: {{ .Values.postgres.operator.version | quote }}
+  postgresVersion: {{ .Values.postgres.operator.version | int | quote }}
+  {{- if .Values.postgres.operator.postgresConfig }}
   postgresql.conf:
     {{- range $key, $value := .Values.postgres.operator.postgresConfig }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
+  {{- end }}
 ---
 {{- if .Values.postgres.operator.connectionPooling.enabled }}
 apiVersion: stackgres.io/v1
@@ -69,23 +77,17 @@ metadata:
     {{- include "flexprice.labels" . | nindent 4 }}
 spec:
   scripts:
-    - name: create-flexprice-database
+    - id: 0
+      name: create-databases
       script: |
-        CREATE DATABASE {{ .Values.postgres.database }} OWNER {{ .Values.postgres.user }};
-    - name: create-temporal-database
+        -- Create FlexPrice database
+        SELECT 'CREATE DATABASE {{ .Values.postgres.database }}' WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = '{{ .Values.postgres.database }}')\gexec
+        -- Create Temporal databases
+        SELECT 'CREATE DATABASE temporal' WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = 'temporal')\gexec
+        SELECT 'CREATE DATABASE temporal_visibility' WHERE NOT EXISTS (SELECT FROM pg_database WHERE datname = 'temporal_visibility')\gexec
+    - id: 1
+      name: enable-extensions
+      database: temporal_visibility
       script: |
-        CREATE DATABASE temporal OWNER {{ .Values.postgres.user }};
-        GRANT ALL PRIVILEGES ON DATABASE temporal TO {{ .Values.postgres.user }};
-{{- if .Values.postgres.operator.backup.enabled }}
----
-apiVersion: stackgres.io/v1beta1
-kind: SGBackup
-metadata:
-  name: {{ .Values.postgres.operator.name }}-backup
-  labels:
-    {{- include "flexprice.labels" . | nindent 4 }}
-spec:
-  sgCluster: {{ .Values.postgres.operator.name }}
-  managedLifecycle: true
-{{- end }}
+        CREATE EXTENSION IF NOT EXISTS btree_gin;
 {{- end }}
