✨ fix: remove verbose flag from helm lint
Helm lint runs quiet now
remove -v to stabilize logs
simpler output, clearer

--- a/.github/workflows/helm-validate.yml
+++ b/.github/workflows/helm-validate.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Lint FlexPrice chart
         working-directory: helm/flexprice
-        run: helm lint . -v
+        run: helm lint .
 
   helm-template:
     name: Template Validation
