✨ feat(chart): enhance Helm chart metadata and add TLS toggle
- Update Chart.yaml to improve description and add icon, keywords,
  home, and maintainer fields to enrich repository metadata and make
  the chart more discoverable and identifiable.
- Add dependencies section header spacing for readability.
- Add kafka.tls.enabled default path usage in redpanda-cluster template
  to ensure consistent default evaluation across Helm versions.
- Add kafka.tls block in values.yaml (tls.enabled: false) and comment to
  make TLS configuration explicit and easily configurable by users.
- Add minor formatting/whitespace fixes in Chart.yaml and values.yaml.

Rationale:
- Improve user experience and chart discoverability in registries and
  repositories by providing richer metadata (icon, keywords, home,
  maintainers).
- Expose TLS configuration in values.yaml so operators can enable TLS
  explicitly without editing templates.
- Use explicit Helm default handling in template to avoid unexpected
  behavior when the value is not set.

--- a/helm/flexprice/Chart.yaml
+++ b/helm/flexprice/Chart.yaml
@@ -1,21 +1,27 @@
 apiVersion: v2
 name: flexprice
-description: A Helm chart for deploying FlexPrice backend with its dependencies
+description: A Helm chart for deploying FlexPrice backend with flexible infrastructure options
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+icon: https://raw.githubusercontent.com/flexprice/flexprice/main/assets/logo.png
+
 keywords:
+  - flexprice
   - billing
   - pricing
   - metering
   - usage-based-billing
   - subscription
+
 home: https://github.com/flexprice/flexprice
 sources:
   - https://github.com/flexprice/flexprice
+
 maintainers:
   - name: FlexPrice Team
     url: https://github.com/flexprice
+
 dependencies:
   # ==========================================================================
   # Stackgres Operator - PostgreSQL with HA, connection pooling, and backups
