✨ chore: improve Helm test validation in CI workflow
Update Helm test validation step to make template parsing more
robust and avoid writing multi-resource YAML to disk.

- Replace `helm template --show-only templates/tests/*.yaml` with a
  streaming pipeline that filters for Pod-like test resources:
  `helm template flexprice . | grep -A 10 "kind: Pod" | grep -E
  "name:|kind:" > /tmp/tests.txt || true`
- Change presence check to use /tmp/tests.txt and count resources
  with `grep "kind:" /tmp/tests.txt | wc -l` to report the number of
  test resources.
- Keep the "no test resources" message when the filtered output is
  empty.

This reduces false negatives when templates produce combined YAML
and avoids saving large generated manifests, making the validation
step faster and more tolerant of non-test resources.

--- a/.github/workflows/helm-validate.yml
+++ b/.github/workflows/helm-validate.yml
@@ -134,10 +134,10 @@ jobs:
         working-directory: helm/flexprice
         run: |
           echo "Validating Helm test definitions..."
-          helm template flexprice . --show-only templates/tests/*.yaml > /tmp/tests.yaml
-          if [ -s /tmp/tests.yaml ]; then
+          helm template flexprice . | grep -A 10 "kind: Pod" | grep -E "name:|kind:" > /tmp/tests.txt || true
+          if [ -s /tmp/tests.txt ]; then
             echo "✓ Test templates generated successfully"
-            grep -c "kind:" /tmp/tests.yaml | xargs echo "✓ Test resources defined:"
+            grep "kind:" /tmp/tests.txt | wc -l | xargs echo "✓ Test resources defined:"
           else
             echo "ℹ No test resources defined"
           fi
